collapse menu ui fixed

--- a/style.css
+++ b/style.css
@@ -28,28 +28,33 @@ marquee {
 }
 @media (max-width: 992px) {
     .navbar-collapse {
-        position: fixed;
-        top: 50px;
-        left: 0;
-        padding-left: 15px;
-        padding-right: 15px;
-        padding-bottom: 15px;
-        width: 75%;
-        height: 100%;
+      position: fixed;
+      top: 0;
+      left: 0;
+      padding-left: 15px;
+      padding-right: 15px;
+      padding-bottom: 15px;
+      width: 100%;
+      height: 100%;
     }
 
     .navbar-collapse.collapsing {
-        left: -75%;
-        transition: height 0s ease;
+      left: -100%;
+      transition: height 0s ease;
     }
 
     .navbar-collapse.show {
-        left: 0;
-        transition: left 300ms ease-in-out;
+      left: 0;
+      transition: left 0ms ease-in-out;
     }
 
     .navbar-toggler.collapsed ~ .navbar-collapse {
-        transition: left 500ms ease-in-out;
+      transition: left 0ms ease-in-out;
+    }
+    .close-btn {
+      position: absolute;
+      top: 20px;
+      right: 20px;
     }
     .right-menu {
         display: none;
@@ -58,7 +63,6 @@ marquee {
         display: block;
     }
 }
-
 .temp {
     width: 100vw;
     display: flex;
@@ -158,6 +162,7 @@ marquee {
 .social-media div {
     margin: 5px;
     text-align: center;
+    cursor: pointer;
 }
 @media (max-width: 700px) {
     .social-media div i {
